<resources>
    <string name="app_name">openchat</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait...</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">1 message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_openchat_and_message_notifications">This will permanently unlock openchat and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_openchat_messages_and_calls">Unregistering from openchat messages and calls...</string>
    <string name="ApplicationPreferencesActivity_disable_openchat_messages_and_calls">Disable openchat messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_openchat_messages_and_calls_by_unregistering">Disable openchat messages and calls by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_openchat_your_default_sms_app">Touch to make openchat your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Passphrase %1$s, Screen security %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_openchat_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">openchat requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_openchat_requires_contacts_permission_in_order_to_attach_contact_information">openchat requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
    <string name="AttachmentManager_openchat_requires_location_information_in_order_to_attach_a_location">openchat requires Location permission in order to attach a location, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Location\".</string>
    <string name="AttachmentManager_openchat_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">openchat requires the Camera permission in order to take photos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="BucketedThreadMedia_Today">Today</string>
    <string name="BucketedThreadMedia_Yesterday">Yesterday</string>
    <string name="BucketedThreadMedia_This_week">This week</string>
    <string name="BucketedThreadMedia_This_month">This month</string>
    <string name="CallScreen_Incoming_call">Incoming call</string>
    <string name="ClearProfileActivity_remove">Remove</string>
    <string name="ClearProfileActivity_remove_profile_photo">Remove profile photo?</string>
    <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Your safety number with %1$s has changed. This could either mean that someone is trying to intercept your communication, or that %2$s simply reinstalled openchat.</string>
    <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">You may wish to verify your safety number with this contact.</string>
    <string name="ConfirmIdentityDialog_accept">Accept</string>
    <string name="ContactsCursorLoader_recent_chats">Recent chats</string>
    <string name="ContactsCursorLoader_contacts">Contacts</string>
    <string name="ContactsDatabase_message_s">Message %s</string>
    <string name="ContactsDatabase_openchat_call_s">openchat Call %s</string>
    <string name="ConversationItem_error_not_delivered">Not delivered</string>
    <string name="ConversationItem_received_key_exchange_message_tap_to_process">Received key exchange message, tap to process.</string>
    <string name="ConversationItem_group_action_left">%1$s has left the group.</string>
    <string name="ConversationItem_click_for_details">Tap for details</string>
    <string name="ConversationItem_click_to_approve_unencrypted">Tap for unsecured fallback</string>
    <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Fallback to unencrypted SMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Fallback to unencrypted MMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">This message will <b>not</b> be encrypted because the recipient is no longer a openchat user.\n\nSend unsecured message?</string>
    <string name="ConversationItem_unable_to_open_media">Can\'t find an app able to open this media.</string>
    <string name="ConversationItem_copied_text">Copied %s</string>
    <string name="ConversationItem_from_s">from %s</string>
    <string name="ConversationItem_to_s">to %s</string>
    <string name="ConversationActivity_reset_secure_session_question">Reset secure session?</string>
    <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">This may help if you\'re having encryption problems in this conversation. Your messages will be kept.</string>
    <string name="ConversationActivity_reset">Reset</string>
    <string name="ConversationActivity_add_attachment">Add attachment</string>
    <string name="ConversationActivity_select_contact_info">Select contact info</string>
    <string name="ConversationActivity_compose_message">Compose message</string>
    <string name="ConversationActivity_sorry_there_was_an_error_setting_your_attachment">Sorry, there was an error setting your attachment.</string>
    <string name="ConversationActivity_recipient_is_not_a_valid_sms_or_email_address_exclamation">Recipient is not a valid SMS or email address!</string>
    <string name="ConversationActivity_message_is_empty_exclamation">Message is empty!</string>
    <string name="ConversationActivity_group_members">Group members</string>
    <string name="preferences__change_passphrase">Change passphrase</string>
    <string name="preferences__change_your_passphrase">Change your passphrase</string>
    <string name="preferences__enable_passphrase">Enable passphrase</string>
    <string name="preferences__lock_openchat_and_message_notifications_with_a_passphrase">Lock openchat and message notifications with a passphrase</string>
    <string name="preferences__screen_security">Screen security</string>
    <string name="preferences__disable_screen_security_to_allow_screen_shots">Block screenshots in the recents list and inside the app</string>
    <string name="preferences__auto_lock_openchat_after_a_specified_time_interval_of_inactivity">Auto-lock openchat after a specified time interval of inactivity</string>
    <string name="preferences__inactivity_timeout_passphrase">Inactivity timeout passphrase</string>
    <string name="preferences__inactivity_timeout_interval">Inactivity timeout interval</string>
    <string name="preferences__notifications">Notifications</string>
    <string name="preferences__led_color">LED color</string>
    <string name="preferences__pref_led_blink_title">LED blink pattern</string>
    <string name="preferences__sound">Sound</string>
    <string name="preferences__repeat_alerts">Repeat alerts</string>
    <string name="preferences__vibrate">Vibrate</string>
    <string name="preferences__incognito_keyboard">Incognito keyboard</string>
    <string name="preferences__read_receipts">Read receipts</string>
    <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">If read receipts are disabled, you won\'t be able to see read receipts from others.</string>
    <string name="preferences__request_keyboard_to_disable_personalized_learning">Request keyboard to disable personalized learning</string>
    <string name="preferences_app_protection__blocked_contacts">Blocked contacts</string>
    <string name="preferences_advanced__relay_all_calls_through_the_openchat_server_to_avoid_revealing_your_ip_address">Relay all calls through the openchat server to avoid revealing your IP address to your contact. Enabling will reduce call quality.</string>
    <string name="preferences_advanced__always_relay_calls">Always relay calls</string>
    <string name="preferences_app_protection__app_access">App access</string>
    <string name="preferences_app_protection__communication">Communication</string>
    <string name="preferences_notifications__messages">Messages</string>
    <string name="preferences_notifications__events">Events</string>
    <string name="preferences_notifications__in_chat_sounds">In-chat sounds</string>
    <string name="preferences_notifications__show">Show</string>
    <string name="preferences_events__contact_joined_openchat">Contact joined openchat</string>
    <string name="preferences_notifications__priority">Priority</string>
</resources>