<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_app_protection__app_access">
        <com.openchat.secureim.components.SwitchPreferenceCompat
                            android:key="pref_enable_passphrase_temporary"
                            android:defaultValue="true"
                            android:title="@string/preferences__enable_passphrase"
                            android:summary="@string/preferences__lock_openchat_and_message_notifications_with_a_passphrase"/>

        <Preference android:key="pref_change_passphrase"
                    android:title="@string/preferences__change_passphrase"
                    android:summary="@string/preferences__change_your_passphrase"
                    android:dependency="pref_enable_passphrase_temporary"/>

        <com.openchat.secureim.components.SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_timeout_passphrase"
                android:title="@string/preferences__inactivity_timeout_passphrase"
                android:summary="@string/preferences__auto_lock_openchat_after_a_specified_time_interval_of_inactivity"
                android:dependency="pref_enable_passphrase_temporary"/>

        <Preference android:title="@string/preferences__inactivity_timeout_interval"
                    android:key="pref_timeout_interval"
                    android:dependency="pref_timeout_passphrase"/>

        <com.openchat.secureim.components.SwitchPreferenceCompat
                            android:defaultValue="false"
                            android:key="pref_screen_security"
                            android:title="@string/preferences__screen_security"
                            android:summary="@string/preferences__disable_screen_security_to_allow_screen_shots" />

        <com.openchat.secureim.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_incognito_keyboard"
            android:title="@string/preferences__incognito_keyboard"
            android:summary="@string/preferences__request_keyboard_to_disable_personalized_learning"/>
    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_app_protection__communication">
        <com.openchat.secureim.components.SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_turn_only"
                android:title="@string/preferences_advanced__always_relay_calls"
                android:summary="@string/preferences_advanced__relay_all_calls_through_the_openchat_server_to_avoid_revealing_your_ip_address"/>

        <com.openchat.secureim.components.SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_read_receipts"
                android:title="@string/preferences__read_receipts"
                android:summary="@string/preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts"/>

        <Preference android:key="preference_category_blocked"
                    android:title="@string/preferences_app_protection__blocked_contacts" />
    </PreferenceCategory>

</PreferenceScreen>
