<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preferences_notifications__messages">

        <com.openchat.secureim.components.SwitchPreferenceCompat
                            android:key="pref_key_enable_notifications"
                            android:title="@string/preferences__notifications"
                            android:defaultValue="true" />

        <com.openchat.secureim.preferences.widgets.openchatPreference
                android:dependency="pref_key_enable_notifications"
                android:key="pref_key_ringtone"
                android:title="@string/preferences__sound"
                android:persistent="false"
                android:defaultValue="content://settings/system/notification_sound" />

        <com.openchat.secureim.components.SwitchPreferenceCompat
                            android:dependency="pref_key_enable_notifications"
                            android:key="pref_key_vibrate"
                            android:defaultValue="true"
                            android:title="@string/preferences__vibrate"/>

        <com.openchat.secureim.preferences.widgets.LEDColorListPreference
            android:key="pref_led_color"
            android:defaultValue="blue"
            android:title="@string/preferences__led_color"
            android:dependency="pref_key_enable_notifications"
            android:entries="@array/pref_led_color_entries"
            android:entryValues="@array/pref_led_color_values" />

        <com.openchat.secureim.preferences.widgets.openchatListPreference
            android:key="pref_led_blink"
            android:defaultValue="500,2000"
            android:title="@string/preferences__pref_led_blink_title"
            android:dependency="pref_led_color"
            android:entries="@array/pref_led_blink_pattern_entries"
            android:entryValues="@array/pref_led_blink_pattern_values" />

        <com.openchat.secureim.components.SwitchPreferenceCompat
                            android:key="pref_key_inthread_notifications"
                            android:title="@string/preferences_notifications__in_chat_sounds"
                            android:dependency="pref_key_enable_notifications"
                            android:defaultValue="true" />

        <com.openchat.secureim.preferences.widgets.openchatListPreference
                android:key="pref_repeat_alerts"
                android:defaultValue="0"
                android:title="@string/preferences__repeat_alerts"
                android:dependency="pref_key_enable_notifications"
                android:entries="@array/pref_repeat_alerts_entries"
                android:entryValues="@array/pref_repeat_alerts_values" />

        <com.openchat.secureim.preferences.widgets.openchatListPreference
                android:key="pref_notification_privacy"
                android:title="@string/preferences_notifications__show"
                android:dependency="pref_key_enable_notifications"
                android:defaultValue="all"
                android:entries="@array/pref_notification_privacy_entries"
                android:entryValues="@array/pref_notification_privacy_values"/>

        <com.openchat.secureim.preferences.widgets.openchatListPreference
                android:key="pref_notification_priority"
                android:title="@string/preferences_notifications__priority"
                android:dependency="pref_key_enable_notifications"
                android:defaultValue="1"
                android:entries="@array/pref_notification_priority_entries"
                android:entryValues="@array/pref_notification_priority_values"/>
    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_notifications__events">
        <com.openchat.secureim.components.SwitchPreferenceCompat
            android:key="pref_enable_new_contacts_notifications"
            android:title="@string/preferences_events__contact_joined_openchat"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>